workloads/bouvier/netpol/allow-from-bouvier-to-bouvier.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-bouvier-to-bouvier
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name=bouvier
  policyTypes:
    - Ingress
