workloads/bouvier/netpol/allow-from-marge.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-marge-simpson
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: marge
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: simpson
  policyTypes:
    - Ingress
